--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         </div>
     </header>
 
+    <!-- NOVO BLOCO DO QUESTIONÁRIO INÍCIO -->
+    <section id="aviso-questionario" class="aviso-questionario-destaque">
+        <div class="container">
+            <h2>Contribua com sua Opinião! 🗣️</h2>
+            <p>Estamos realizando uma pesquisa anônima para entender melhor as percepções e experiências relacionadas aos temas abordados nesta página. Sua participação é muito valiosa!</p>
+            <p><strong>Por favor, leva apenas alguns minutos. Clique abaixo para responder:</strong></p>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdf-8pYuEdwWrFrZ1bgSnHqLOOxlOR7_Zb-2boKiYQgybk03Q/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="botao-questionario">Acessar Questionário Anônimo</a>
+        </div>
+    </section>
+    <!-- NOVO BLOCO DO QUESTIONÁRIO FIM -->
+
     <main class="container">
         <section id="o-que-e-ser-trans">
             <h2>Compreendendo a Experiência Transgênero: Para Além do Binarismo</h2>
@@ -130,7 +141,7 @@
                 <li><span class="li-icon">🌐</span><strong>ANTRA (Associação Nacional de Travestis e Transexuais):</strong> <a href="https://antrabrasil.org/" target="_blank" rel="noopener noreferrer">antrabrasil.org</a></li>
                 <li><span class="li-icon">🌐</span><strong>ABGLT (Associação Brasileira de Lésbicas, Gays, Bissexuais, Travestis, Transexuais e Intersexos):</strong> <a href="https://abglt.org.br/" target="_blank" rel="noopener noreferrer">abglt.org.br</a></li>
                 <li><span class="li-icon">🌐</span><strong>Rede Trans Brasil:</strong> <a href="https://redetransbrasil.org.br/" target="_blank" rel="noopener noreferrer">redetransbrasil.org.br</a></li>
-    
+
                 <li><span class="li-icon">🤝</span>Grupos de apoio locais e online.</li>
             </ul>
             <p>Se você é uma pessoa trans e precisa de ajuda, ou se quer se informar mais, não hesite em procurar esses recursos!</p>
