--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p>Existem diversas organizações e materiais que oferecem informação e suporte. No Ceará, destacamos:</p>
             <ul class="lista-com-icones">
                 <li><span class="li-icon">📞</span><strong>Centro de Referência Janaína Dutra (Fortaleza/CE):</strong> (85) 3452-2040 / (85) 98537-1877 (WhatsApp). Endereço: Rua Pedro Pereira, 489 - Centro.</li>
-                <li><span class="li-icon">📞</span><strong>Centro Estadual de Referência LGBT+ Thina Rodrigues (Governo do Ceará):</strong> (85) 98990-5747 / (85) 3108-2761 / (85) 3108-2762. E-mail: [email protected] Endereço: Rua Valdetário Mota, 970 – Papicu.</li>
+                <li><span class="li-icon">📞</span><strong>Centro Estadual de Referência LGBT+ Thina Rodrigues (Governo do Ceará):</strong> (85) 98990-5747 / (85) 3108-2761 / (85) 3108-2762. Endereço: Rua Valdetário Mota, 970 – Papicu.</li>
                 <li><span class="li-icon">🌐</span><strong>ANTRA (Associação Nacional de Travestis e Transexuais):</strong> <a href="https://antrabrasil.org/" target="_blank" rel="noopener noreferrer">antrabrasil.org</a></li>
                 <li><span class="li-icon">🌐</span><strong>ABGLT (Associação Brasileira de Lésbicas, Gays, Bissexuais, Travestis, Transexuais e Intersexos):</strong> <a href="https://abglt.org.br/" target="_blank" rel="noopener noreferrer">abglt.org.br</a></li>
                 <li><span class="li-icon">🌐</span><strong>Rede Trans Brasil:</strong> <a href="https://redetransbrasil.org.br/" target="_blank" rel="noopener noreferrer">redetransbrasil.org.br</a></li>
