Update font links and restructure header content

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;700&family=Montserrat:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <header>
-        <div class="container">
-            <h1>🏳️‍⚧️ Direitos Trans</h1>
-            <p>Um guia sobre dignidade, direitos e a importância da aliança.</p>
+        <div class="header-content">
+            <div class="header-tape tape-top"></div>
+            <h1>DIREITOS<br><span class="h1-highlight">TRANS</span></h1>
+            <p class="tagline">// UM GUIA DE SOBREVIVÊNCIA E LUTA // </p>
+            <div class="header-tape tape-bottom"></div>
         </div>
     </header>
 
@@ -23,6 +25,7 @@
             <ul>
                 <li><a href="#compreendendo">Compreendendo</a></li>
                 <li><a href="#direitos">Direitos</a></li>
+                <li><a href="#cotas-universitarias">Cotas</a></li>
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="#alianca">Aliança</a></li>
                 <li><a href="#recursos">Recursos</a></li>
@@ -30,10 +33,18 @@
         </div>
     </nav>
 
+    <section id="destaque-cotas" class="destaque-cotas">
+        <div class="container">
+            <h2>LUTA POR ESPAÇO E FUTURO</h2>
+            <p>Ações afirmativas em universidades públicas são uma ferramenta de reparação histórica. Saiba mais sobre a luta pelo direito à educação para a comunidade trans.</p>
+            <a href="#cotas-universitarias" class="btn-destaque">Entenda a Importância das Cotas</a>
+        </div>
+    </section>
+
     <main class="container">
         <section id="compreendendo">
             <h2>Compreendendo a Experiência Trans</h2>
-            <p>Uma pessoa transgênero (ou trans) é aquela cuja identidade de gênero – a convicção íntima de ser homem, mulher, ambos ou nenhum – difere do sexo que lhe foi atribuído ao nascer. Isso não é uma escolha, mas uma manifestação autêntica da diversidade humana.</p>
+            <p>Uma pessoa trans é aquela cuja identidade de gênero – a convicção íntima de ser homem, mulher, ambos ou nenhum – difere do sexo que lhe foi atribuído ao nascer. Isso não é uma escolha, mas uma manifestação autêntica da diversidade humana.</p>
             <div class="info-cards">
                 <div class="info-card">
                     <h3>Identidade de Gênero</h3>
@@ -63,6 +74,21 @@
                 <li><span class="li-icon">⚖️</span><strong>Criminalização da Transfobia:</strong> O STF equiparou a transfobia ao crime de racismo. Discriminação por identidade de gênero é crime. Denuncie!</li>
                 <li><span class="li-icon">🚻</span><strong>Uso de Banheiros:</strong> Direito de utilizar banheiros e espaços correspondentes à sua identidade de gênero.</li>
                 <li><span class="li-icon">🎓</span><strong>Educação Inclusiva:</strong> Direito a um ambiente escolar seguro, com respeito ao nome social e combate ao bullying transfóbico.</li>
+            </ul>
+        </section>
+
+        <section id="cotas-universitarias">
+            <h2>Cotas: Um Direito à Educação</h2>
+            <p>A educação é um caminho fundamental para a cidadania e a empregabilidade, mas historicamente negada à população trans devido à evasão escolar causada pela transfobia. As cotas em universidades públicas são uma ação afirmativa essencial para reverter esse quadro.</p>
+            <div class="destaque-informativo">
+                Diversas universidades federais e estaduais no Brasil já implementaram a reserva de vagas para pessoas trans, um marco na luta por equidade e reparação histórica. É um movimento crescente e uma conquista da luta.
+            </div>
+            <h3>Por que as cotas são importantes?</h3>
+            <ul class="lista-com-icones">
+                <li><span class="li-icon">🛠️</span><strong>Reparação Histórica:</strong> Combatem a exclusão sistemática que força pessoas trans a abandonarem os estudos e as empurra para a marginalidade.</li>
+                <li><span class="li-icon">💡</span><strong>Diversidade Acadêmica:</strong> Enriquecem o ambiente universitário com novas perspectivas e vivências, fortalecendo a produção de conhecimento.</li>
+                <li><span class="li-icon">📈</span><strong>Inclusão Socioeconômica:</strong> Acesso ao ensino superior é uma porta de entrada para o mercado de trabalho formal, quebrando o ciclo de vulnerabilidade.</li>
+                <li><span class="li-icon">✊</span><strong>Visibilidade e Referência:</strong> A presença de pessoas trans nas universidades cria referências positivas e inspira futuras gerações.</li>
             </ul>
         </section>
 
